コメント完成

--- a/sass/component/_c-tglbutton.scss
+++ b/sass/component/_c-tglbutton.scss
@@ -129,6 +129,7 @@ $root2:1.4142;
     //position: relative;
     .#{$baseclass}{
         position: absolute;
+        z-index: 1;
         
         &::before{
             font-size:0.8*$fsize;
