--- a/sass/component/_component.scss
+++ b/sass/component/_component.scss
@@ -2,6 +2,7 @@
 @import "c-cloud";
 @import "c-firetext";
 @import "c-barbox";
+@import "c-button";
 @import "c-tglbutton";
 @import "c-shadow";
 @import "c-anime";
