--- a/sass/Foundation/_f-base.scss
+++ b/sass/Foundation/_f-base.scss
@@ -7,6 +7,10 @@
     padding:0;
     box-sizing: border-box;
 	font-family: "M PLUS Rounded 1c",'Source Sans Pro';
+	font-style: normal;
+}
+i{
+	font-style: normal;
 }
 img{
 	vertical-align:top;
