--- a/sass/project/_p-comments.scss
+++ b/sass/project/_p-comments.scss
@@ -18,7 +18,7 @@
     @include cloudpouup(comments-post,12vw,24%,5%);
     #comments-post{
         .comments-post--area{
-            @include tglbutton-come-base(tglbutton-come,12vw);
+            @include tglbutton-faws-base(tglbutton-come,12vw);
         }
         #comments-post--on:not(:checked) ~ .comments-post--area{
             .comments-post--contant{opacity: 0.00001; transform: scale(0);}
@@ -49,25 +49,19 @@
         justify-content: space-between;
         align-items: center;
         #author{
-            width: 60%;
+            width: 65%;
         }
     }
     .form-submit{
-        text-align: center;
+        display: flex;
+        justify-content: center;
         #submit{
-            margin:0.5rem 0;
-            padding: 0.3rem 2rem;
-            width: 100%;
-
-            border-radius: 3px;
-            border: none;
-            
+            @include width-button();
             color: $clb-g10;
             background-color: #d35a00;
-            font-size: 1.2em;
-            font-weight: bold;
-
-            filter: drop-shadow(1px 1px 0.5px rgba(10, 10, 10, 0.9));
         }
+    }
+    .comments-post--talk{
+        margin: 0 1rem;
     }
 }
