--- a/sass/Foundation/_f-variable.scss
+++ b/sass/Foundation/_f-variable.scss
@@ -3,6 +3,7 @@
 ## Color
 --------------------------------------------------------------*/
 /*base color = white*/
+$clb-bkg:#EEE;
 $clb-r10:rgba(253, 235, 235,1.0);
 $clb-r06:rgba(253, 235, 235,0.6);
 $clb-r03:rgba(253, 235, 235,0.3);
