--- a/sass/project/_project.scss
+++ b/sass/project/_project.scss
@@ -4,6 +4,7 @@
 @import "p-topblock";
 @import "p-breadcrumb";
 @import "p-summry";
+@import "p-inlink";
 @import "p-talk";
 @import "p-cloudpopup";
 @import "p-accordionmenu";
