--- a/sass/project/_p-embeded.scss
+++ b/sass/project/_p-embeded.scss
@@ -51,5 +51,14 @@
             width: 100%;
             height: auto;
         }
+        
+        @include mq(xl) {
+            .embe-ytb--title{font-size: 1em;}
+            .embe-ytb--icon{font-size: 5em;}
+        }
+        @include mq(tb) {
+            .embe-ytb--title{font-size: 0.8em;}
+            .embe-ytb--icon{font-size: 3em;}
+        }
     }
 }
