--- a/sass/project/_project.scss
+++ b/sass/project/_project.scss
@@ -5,6 +5,7 @@
 @import "p-breadcrumb";
 @import "p-summry";
 @import "p-inlink";
+@import "p-singlefirstview";
 @import "p-talk";
 @import "p-cloudpopup";
 @import "p-accordionmenu";
