--- a/sass/Foundation/_f-variable.scss
+++ b/sass/Foundation/_f-variable.scss
@@ -22,3 +22,5 @@ $cla-d03:rgba(43, 24, 0,0.3);
 $cla-l10:rgba(255, 55, 0,1.0);
 $cla-l08:rgba(255, 55, 0,0.8);
 $cla-b10:rgba(183, 82, 10, 1);
+$cla-b06:rgba(183, 82, 10,0.6);
+$cla-b04:rgba(183, 82, 10,0.4);
